--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-easy-grid": "^0.2.1",
     "react-native-elements": "^1.1.0",
     "react-native-google-maps-services": "^0.5.1",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
