--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-google-maps-services": "^0.5.1",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.24.2",
+    "react-native-uuid": "^1.4.9",
     "react-navigation": "^3.0.9",
+    "rn-fetch-blob": "^0.10.15",
     "util": "^0.11.1"
   },
   "devDependencies": {
